syntax = "proto3";

package calendar;

option go_package = "protos/calendarpb";

service CalendarService {
  rpc GetRandomDate(GetDateRequest) returns (GetDateResponse);
}

message GetDateRequest {}

enum Code {
  CODE_UNSPECIFIED = 0;
  CODE_OK = 1;
  CODE_BAD_REQUEST = 2;
  CODE_BAD_NAME = 3;
}

message GetDateResponse {
  Code code = 1;
  string error_message = 2;
  string date = 3;
}
